fix bug with tile disappearing on mobile

--- a/app/assets/stylesheets/client_admin/tiles.css.scss
+++ b/app/assets/stylesheets/client_admin/tiles.css.scss
@@ -130,9 +130,6 @@ body.client_admin-draft_tiles {
     .content {background:$blue;}
     .manage_tiles {
         position: relative;
-        .manage_section{
-            overflow: auto;
-        }
         .creation-placeholder{
             display: inline-block;
             width: 100%;
